infra/k8s/admin-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-client
  template:
    metadata:
      labels:
        app: admin-client
    spec:
      containers:
        - name: admin-client
          image: sandarum/admin-client
---
apiVersion: v1
kind: Service
metadata:
  name: admin-client-srv
spec:
  selector:
    app: admin-client
  ports:
    - name: admin-client
      protocol: TCP
      port: 4100
      targetPort: 4100
