infra/k8s/storefront-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront-client
  template:
    metadata:
      labels:
        app: storefront-client
    spec:
      containers:
        - name: storefront-client
          image: sandarum/storefront-client
---
apiVersion: v1
kind: Service
metadata:
  name: storefront-client-srv
spec:
  selector:
    app: storefront-client
  ports:
    - name: storefront-client
      protocol: TCP
      port: 3000
      targetPort: 3000
