infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: admin-ayusha.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-server-srv
                port:
                  number: 4101

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-client-srv
                port:
                  number: 4100
